--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="https://cdn.sdb.com.cn/poppy/1.0.2/poppy.min.css">
     <title>my-im-safe</title>
   </head>
   <body>
@@ -13,5 +18,8 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="https://unpkg.com/vue@2.6.10/dist/vue.min.js"></script>
+    <script src="https://cdn.sdb.com.cn/poppy/1.0.2/poppy.rem.min.js"></script>
+    <script src="https://cdn.sdb.com.cn/poppy/1.0.2/poppy.rem.min.js"></script>
   </body>
 </html>
